add Practical tasks 1 and 2